--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  curved_navigation_bar: ^1.0.3
+
+  #STYLE
   cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
 
   #FIREBASE
   firebase_core: ^2.24.0
   firebase_auth: ^4.15.0
+  cloud_firestore: ^4.13.6
+  firebase_storage: ^11.6.5
+  google_sign_in: ^6.2.1
+
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,7 +66,7 @@ flutter:
   
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+      - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
