wacth list watched list

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   google_fonts: ^6.2.1
   carousel_slider: ^4.2.1
   curved_navigation_bar: ^1.0.3
+  flutter_launcher_icons: ^0.13.1
 
-  #FIREBASE
+  #GOOGLE
   firebase_core: ^2.24.0
   firebase_auth: ^4.15.0
   cloud_firestore: ^4.13.6
@@ -43,7 +44,11 @@ dependencies:
   google_sign_in: ^6.2.1
   google_generative_ai: ^0.2.0
 
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: 'assets/icon.png'
+  adaptive_icon_foreground: "#000000"
 
 
 dev_dependencies:
@@ -71,8 +76,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/
-  #   - images/a_dot_ham.jpeg
-
+     
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
